[gd_scene load_steps=7 format=3 uid="uid://ch3j3frsccrfq"]

[ext_resource type="Script" path="res://Scripts/bossdoor.gd" id="1_ovnhy"]
[ext_resource type="Texture2D" uid="uid://ckem1kiq27s6e" path="res://DungeonAssetPack/Tiles/tile_0045.png" id="2_3e51f"]
[ext_resource type="Texture2D" uid="uid://cqhmbmcjhnpq6" path="res://DungeonAssetPack/Tiles/tile_0033.png" id="3_l31h6"]
[ext_resource type="AudioStream" uid="uid://c4jo5bbbhy2a5" path="res://Sounds/doors.mp3" id="4_bliw4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3j76"]
size = Vector2(17, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_03ei0"]
radius = 12.0

[node name="BossDoor" type="StaticBody2D"]
modulate = Color(0.819608, 0.498039, 0.784314, 1)
script = ExtResource("1_ovnhy")

[node name="ClosedBlock" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_l3j76")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_03ei0")

[node name="closed" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0.5, 0)
scale = Vector2(1.05, 1)
texture = ExtResource("2_3e51f")

[node name="opened" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0.5, 0)
scale = Vector2(1.05, 1)
texture = ExtResource("3_l31h6")
region_rect = Rect2(0, -3, 21, 23)

[node name="DoorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bliw4")
volume_db = -5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
